--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,35 @@
 version: "3.8"
 services:
-  web:
-    build: .
+
+  traefik:
+    image: traefik:v2.10
     restart: always
     ports:
       - "80:80"
+      - "443:443"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - ./traefik/traefik.yml:/traefik.yml:ro
+      - ./traefik/acme.json:/acme.json
+
+  web:
+    build: .
+    restart: always
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.web.rule=Host(`ivanlabs.space`,`www.ivanlabs.space`)"
+      - "traefik.http.routers.web.entrypoints=websecure"
+      - "traefik.http.routers.web.tls.certresolver=letsencrypt"
+
+  n8n:
+    image: n8nio/n8n
+    restart: always
+    environment:
+      N8N_BASIC_AUTH_ACTIVE: "true"
+      N8N_BASIC_AUTH_USER: seu_usuario
+      N8N_BASIC_AUTH_PASSWORD: sua_senha_forte
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.n8n.rule=Host(`n8n.ivanlabs.space`)"
+      - "traefik.http.routers.n8n.entrypoints=websecure"
+      - "traefik.http.routers.n8n.tls.certresolver=letsencrypt"
